# lab-image-blending

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  lab_image_blending.cpp  lab_image_blending.h  linear_blending.cpp  main.cpp
cpp/: lab_2.cpp  laplace_blending.cpp  laplace_blending.h  linear_blending.h
cpp/solution/: CMakeLists.txt  README.md  lab_2.cpp  lab_2.h  laplace_blending.cpp  linear_blending.cpp  main.cpp
lab-guide/: 1-get-an-overview.md  2-implement-image-blending.md
py/: README.md  requirements.txt
py/solution/: lab-02.ipynb  lab-02.py
